--- a/Reminder/Reminder.WebApi/Reminder.WebApi.csproj
+++ b/Reminder/Reminder.WebApi/Reminder.WebApi.csproj
@@ -309,6 +309,8 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
+    <Content Include="Views\Home\Register.cshtml" />
+    <Content Include="Views\Home\Login.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
