Added IRepository with async methods, NotesController.

--- a/Reminder/Reminder.Data/Reminder.Data.csproj
+++ b/Reminder/Reminder.Data/Reminder.Data.csproj
@@ -54,6 +54,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Abstract\IRepository.cs" />
     <Compile Include="ApplicationContext.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="Entities\AchievementModel.cs" />
@@ -71,6 +72,9 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Concrete\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
