--- a/Reminder/Reminder.Data/Reminder.Data.csproj
+++ b/Reminder/Reminder.Data/Reminder.Data.csproj
@@ -67,14 +67,12 @@
     <Compile Include="Entities\ToDoModel.cs" />
     <Compile Include="Entities\VideoModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repository.cs" />
+    <Compile Include="Concrete\Repository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Concrete\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
