--- a/Reminder/Reminder.WebApi/Reminder.WebApi.csproj
+++ b/Reminder/Reminder.WebApi/Reminder.WebApi.csproj
@@ -322,6 +322,7 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Login.cshtml" />
     <Content Include="Views\Home\Register.cshtml" />
+    <Content Include="Views\Home\Notes.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
