--- a/Reminder/Reminder.Migrations/App.config
+++ b/Reminder/Reminder.Migrations/App.config
@@ -6,6 +6,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=ReminderDb;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="ReleaseConnection" connectionString="Data Source=10.132.34.144;Database=ReminderDb;User ID=ars; Password=luke465" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
