--- a/Reminder/Reminder.WebApi/Web.config
+++ b/Reminder/Reminder.WebApi/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=ReminderDb;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="ReleaseConnection" connectionString="Data Source=10.132.34.144;Database=ReminderDb;User ID=ars; Password=luke465" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
