WebApi: created NoteRepository. Token store set to local storage.

--- a/Reminder/Reminder.Data/Reminder.Data.csproj
+++ b/Reminder/Reminder.Data/Reminder.Data.csproj
@@ -54,8 +54,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Abstract\INoteRepository.cs" />
     <Compile Include="Abstract\IRepository.cs" />
     <Compile Include="ApplicationContext.cs" />
+    <Compile Include="Concrete\NoteRepository.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="Entities\AchievementModel.cs" />
     <Compile Include="Entities\AchievementNote.cs" />
