--- a/Reminder/ReminderXamarin.Android/ReminderXamarin.Android.csproj
+++ b/Reminder/ReminderXamarin.Android/ReminderXamarin.Android.csproj
@@ -408,5 +408,10 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable-xxhdpi\off.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\CustomAlert.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
